# image-processing-fall-2023-pa02-harrison-e

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yml
lib/include/: Image.h  Pixel.h  PixelVector.h
lib/src/: Image.cpp  Pixel.cpp  PixelVector.cpp
